chore: improving openapi-documentation
