# src/api_doc.rs
@@ -5,15 +5,34 @@ use utoipa::{
 };
 use utoipa_swagger_ui::SwaggerUi;
 
-use crate::controller::admin;
-use crate::controller::login;
-use crate::controller::redirect;
-use crate::controller::user;
-use crate::health_check;
-use crate::model::{UserCredentialsDTO, UserRegistrationTokenDTO, UserTokenDTO};
+use crate::model::{
+    FullRedirectListDTO, PasswordChangeDataDTO, Redirect, RedirectDTO, RedirectListDTO,
+    UpdateUrlDTO, UserCredentialsDTO, UserRegistrationDTO, UserRegistrationTokenDTO, UserTokenDTO,
+};
+use crate::{controller::admin, model::UserDTO};
+use crate::{controller::login, model::DeletedUserDTO};
+use crate::{controller::redirect, model::DeletedUserResourceDTO};
+use crate::{controller::user, model::UserListDTO};
+use crate::{health_check, model::SimpleUserDTO};
 
 #[derive(OpenApi)]
 #[openapi(
+    tags(
+        (name = "Auth", description = "Endpoints that handle user authentication."),
+        (name = "Redirects", description = "These endpoints handle redirect management."),
+        (name = "Users", description = "These endpoints handle user management."),
+        (name = "Admin", description = "Admin management endpoints. All these endpoints require a valid JWT with admin claims."),
+    ),
+    info(title = "Via-Alias API",
+        license(name = "MIT",
+            identifier = "MIT"
+        ),
+        description = "API for [Via-Alias](https://github.com/ngundlach/via-alias). This API can be used to create and manage redirects as well as users.
+        <br><br>**Authentication:**<br>
+        Most Endpoints require a Bearer token obtained from `POST /api/auth/login`.
+        Include it in the `Authorization` header as `Bearer <token>`."
+    ),
+    servers((url = "https://example.com", description = "Example:")),
     paths(
         login::login_user_handler,
         admin::request_user_registration_token_handler,
@@ -32,10 +51,14 @@ use crate::model::{UserCredentialsDTO, UserRegistrationTokenDTO, UserTokenDTO};
         redirect::follow_redirect_handler,
         health_check::health_check_handler,
     ),
-    components(schemas(UserCredentialsDTO, UserTokenDTO, UserRegistrationTokenDTO)),
+    components(schemas(
+        UserDTO, DeletedUserDTO, DeletedUserResourceDTO, SimpleUserDTO, UserListDTO, UserCredentialsDTO,
+        PasswordChangeDataDTO, UserTokenDTO, UserRegistrationTokenDTO, UserRegistrationDTO,
+        Redirect, FullRedirectListDTO, RedirectDTO, RedirectListDTO, UpdateUrlDTO
+    )),
     modifiers(&SecurityAddon)
 )]
-struct ApiDoc;
+pub(crate) struct ApiDoc;
 struct SecurityAddon;
 impl Modify for SecurityAddon {
     fn modify(&self, openapi: &mut utoipa::openapi::OpenApi) {
