# src/controller/health_check.rs
@@ -3,7 +3,10 @@ use axum::{http::StatusCode, response::IntoResponse};
 #[utoipa::path(get,
     path = "/healthcheck",
     tag="healthcheck",
+    summary = "healtcheck",
+    description = "Check if the service is running",
     operation_id="healthcheck",
+    security(),
     responses(
         (status = StatusCode::OK, description = "Via-Alias is running"),
 ))]
