# src/controller/user.rs
@@ -9,9 +9,10 @@ use axum::{
 use crate::{
     AppContext,
     model::{
-        PasswordChangeDataDTO, SimpleUserDTO, UserClaimsDTO, UserCredentialsDTO, UserPasswordChangeDTO, UserRegistrationDTO
+        PasswordChangeDataDTO, SimpleUserDTO, UserClaimsDTO, UserCredentialsDTO,
+        UserPasswordChangeDTO, UserRegistrationDTO,
     },
-    service::{DbServiceError},
+    service::DbServiceError,
 };
 
 pub(crate) fn protected_user_management_router() -> Router<AppContext> {
@@ -24,13 +25,14 @@ pub(crate) fn user_router() -> Router<AppContext> {
     Router::new().route("/api/users/register", post(register_user_handler))
 }
 
-#[utoipa::path(patch, 
+#[utoipa::path(patch,
     path = "/api/users/password",
-    tag="users",
-    description = "Change user-password. Requires authentication. Pass a JWT as a bearer token in the Authorization header.",
-    request_body = UserPasswordChangeDTO, 
+    tag = "Users",
+    summary = "Change password",
+    description = "Changes the user-password. Requires authentication. Pass a JWT as a bearer token in the `Authorization` header.",
+    request_body = PasswordChangeDataDTO,
     security(("bearer_auth" = [])),
-    operation_id="change_password", 
+    operation_id="change_password",
     responses(
         (status = StatusCode::OK, description = "Ok. Password changed successfully."),
         (status = StatusCode::BAD_REQUEST, description = "Bad Request. Current password is invalid or wew password doesn't match requirements."),
@@ -52,12 +54,14 @@ async fn change_user_password_handler(
     Ok(StatusCode::OK.into_response())
 }
 
-#[utoipa::path(post, 
+#[utoipa::path(post,
     path = "/api/users/register",
-    tag="users", 
-    description = "Register a new user. Requires a generated user registration token.",
+    tag = "Users",
+    summary = "Register new user",
+    description = "Registers a new user. Requires a generated user registration token.",
     request_body = UserRegistrationDTO,
-    operation_id="register_user", 
+    operation_id="register_user",
+    security(),
     responses(
         (status = StatusCode::CREATED, description = "Created. User registered successfully.", body = SimpleUserDTO),
         (status = StatusCode::CONFLICT, description="Conflict. A user with that name already exists."),
@@ -78,12 +82,13 @@ async fn register_user_handler(
     Ok((StatusCode::CREATED, Json(res)).into_response())
 }
 
-#[utoipa::path(get, 
+#[utoipa::path(get,
     path = "/api/users/info",
-    tag="users", 
-    description = "Get userdata about own useraccount. Requires authentication. Pass a JWT as a bearer token in the Authorization header.",
+    tag = "Users",
+    summary = "Get own userdata",
+    description = "Returns userdata about the current user. Requires authentication. Pass a JWT as a bearer token in the `Authorization` header.",
     security(("bearer_auth" = [])),
-    operation_id="get_user_data", 
+    operation_id="get_user_data",
     responses(
         (status = StatusCode::OK, description = "Ok. Returns userdata.", body = SimpleUserDTO),
         (status = StatusCode::UNAUTHORIZED, description = "Unauthorized. No valid access token."),
